# bluebash_test1

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 4a7093bb1604_add_forign_keys.py  99842fe6d43c_chnage_table_name.py  9d29bbc9c6d0_modify_columns_names.py  cb47c64c7f61_add_colmuns.py  ce2d2fb737b6_modify_columns_names.py
app/: crud.py  database.py  models.py  router.py
app/api/: router.py
app/db/: crud.py  models.py  mysql_db_crud.py  schemas.py
app/services/: agent_service.py  properties_service.py  realtor_service.py
app/task_scheduler/: task.py
app/utils/: log_utils.py
data/: query_result 3.csv
